objects/Credit_Check_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Credit_Check_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Application_Id__c</fullName>
        <description>Loan- External Id to credit bureau(Mosaic, Loanpath). Vendors use this to communicate with SFDC</description>
        <label>Application Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <description>Type for each application with credit vendors</description>
        <label>Application Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Loan- added to capture data from Mosaic. This will be used to send Lending Agreement call. FirstName, Last name will besent to Mosaic as well as updated on the quote- temp contact 1 field</description>
        <label>City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Credit_Check_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Beureu__c</fullName>
        <description>Loan- Credit bureau where application is submitted</description>
        <label>Credit Bureau</label>
        <picklist>
            <picklistValues>
                <fullName>Mosaic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LoanPath</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Check_Approval_Date__c</fullName>
        <description>Loan Project- moving from Account object</description>
        <label>Credit Check Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Check_Expiration_Date__c</fullName>
        <description>Loan Project- moving from account</description>
        <label>Credit Check Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Check_Message__c</fullName>
        <description>Loan Project- moving from Account- captures all messages from the vendor</description>
        <label>Credit Check Message</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Check_Submission_Date__c</fullName>
        <description>Loan Project- Lease, Loan Credit check Submission Project</description>
        <label>Credit Check Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field tracks the number of times remainder emails have been sent to the customer</description>
        <label>Email Counter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <inlineHelpText>Email to send the credit request form to.</inlineHelpText>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>Holds the error message from Greenlight webservice.</description>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Loan- Lookup to Opprtunity for Loan Project- Ask eric why we need this</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Credit_Check_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Loan- added to capture data from Mosaic. This will be used to send Lending Agreement call. FirstName, Last name will besent to Mosaic as well as updated on the quote- temp contact 1 field</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Send_Lease_Credit_Check_Failure_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to send lease credit check failure email</description>
        <label>Send Lease Credit Check Failure Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Loan- added to capture data from Mosaic. This will be used to send Lending Agreement call. FirstName, Last name will besent to Mosaic as well as updated on the quote- temp contact 1 field</description>
        <label>State</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street2__c</fullName>
        <description>Loan- added to capture data from Mosaic. This will be used to send Lending Agreement call. FirstName, Last name will besent to Mosaic as well as updated on the quote- temp contact 1 field</description>
        <label>Street2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Loan- added to capture data from Mosaic. This will be used to send Lending Agreement call. FirstName, Last name will besent to Mosaic as well as updated on the quote- temp contact 1 field</description>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Successful_Invite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Successful Invite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <description>Loan- added to capture data from Mosaic. This will be used to send Lending Agreement call. FirstName, Last name will besent to Mosaic as well as updated on the quote- temp contact 1 field</description>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Credit Check Application</label>
    <nameField>
        <displayFormat>CCR-{000000}</displayFormat>
        <label>Credit Check Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Check Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>